Make seat results explorable
